add logo to webpage

--- a/website/index.html
+++ b/website/index.html
@@ -78,7 +78,7 @@
 <body>
     <div class="card">
         <div class="card-header">
-            <h2>AWS or NOT</h2>
+            <img src="./logo.jpg" alt="AWS or NOT Logo" class="img-fluid mb-3" style="max-width: 350px;" />
             <p class="mb-0">Check if a URL is using AWS</p>
         </div>
         <div class="card-body">
